# hold

./: .gitignore  .gitmodules  Cargo.toml  server.go
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/sashankg/hold/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/sashankg/hold/: BackupWorker.kt  HoldApplication.kt  HoldDatabase.kt  MainActivity.kt  ServerService.kt  WatcherWorker.kt
Android/app/src/main/java/com/sashankg/hold/model/: Media.kt
Android/app/src/main/java/com/sashankg/hold/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/java/com/sashankg/hold/worker/: BackupWorker.kt  UploadWorker.kt  WatcherWorker.kt
Android/app/src/main/res/xml/: network_security_config.xml
Android/app/src/test/java/com/sashankg/hold/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
go/: dev.go  go.mod  go.sum  logger_extension.go  main.go  prod.go  rendezvous.key  server.key  testSchema.graphql
go/core/: resolver.go  route.go
go/dao/: collections.go  collections_test.go  dao.go  records.go
go/graphql/: registrar.go  registrar_test.go  resolver.go  util.go  validator.go  validator_test.go
go/handlers/: collections_handler.go  graphql_handler.go  graphql_handler_test.go  pb_handler.go  upload_handler.go
go/migrations/: 00001_init.sql
go/mocks/: mock_dao.go
go/rendezvous/: rendezvous.go  rendezvous.key
go/rendezvous/migrations/: 00001_init.sql
go/resolvers/: collections_resolver.go  collections_resolver_test.go  graphql_schema.go  kv_resolver.go  kv_resolver_test.go  register_resolver.go  register_resolver_test.go  util.go
go/server/: listener.go  server.go  server.key  util.go
go/server/migrations/: 00001_init.sql
go/test_util/: sqlmock.go
go/testing/mocks/: dao_mock.go  mock_dao.go  resolver_mock.go  validator_mock.go
go/testing/util/: memory_dao.go  sqlmock.go
go/util/: http.go  identity.go  proc.go
server/: Cargo.toml
server/src/: graph.rs  router.rs
server/src/router/: register.rs
server/static/: upload.html
src/: main.rs  router.rs
tailscale/: Cargo.toml  build.rs
tailscale/src/: lib.rs
typescript/libp2p-test/: package.json  pnpm-lock.yaml
typescript/libp2p-test/dev-dist/: sw.js
typescript/libp2p-test/src/: libp2p.ts  main.tsx
