[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.4", default-features = false, features = ["tokio",  "json", "form", "multipart", "original-uri", "matched-path", "query", "tower-log", "tracing"] }
graphql-parser = "0.4.0"
juniper = { git = "https://github.com/graphql-rust/juniper/", version = "0.16.0-dev" }
juniper_axum = { git = "https://github.com/graphql-rust/juniper/", version = "0.1.0" }
rusqlite = "0.30.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.113"
tokio = { workspace = true, features = ["macros", "rt"] }
tailscale = { path = "../tailscale", optional = true }
hyper-util = { version = "0.1.3", features = ["service", "http2", "tokio", "service"] }
hyper = { version = "1.2.0", features = ["http2", "server"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tokio-util = { version = "0.7.10", features = ["io"] }

[env]
SQLITE3_LIB_DIR = "/opt/homebrew/opt/sqlite/bin"

[features]
default = ["prod"]
prod = ["tailscale"]
dev = ["axum/http1"]
