[package]
name = "tailscale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
hyper = { version="1.2.0", features = ["server", "http2"]}
hyper-util = { version = "0.1.3", features = ["server", "http2", "tokio", "service"] }
tokio = "1.36.0"

[build-dependencies]
bindgen = "0.69.4"
